--- a/main.css
+++ b/main.css
@@ -11,16 +11,82 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-  scrollbar-width: none;
+html,
+body {
   position: relative;
   width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Kumbh Sans", sans-serif;
+  scrollbar-width: none;
 }
 
 body {
-  padding: 2.4rem;
+  padding: 0.8rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Comfortaa", sans-serif;
+}
+
+h1 {
+  font-size: 3.157rem;
+}
+
+h2 {
+  font-size: 2.369rem;
+}
+
+h3 {
+  font-size: 1.777rem;
+}
+
+h4 {
+  font-size: 1.333rem;
+}
+
+a {
+  font-family: "Roboto Mono", monospace;
+  text-decoration: none;
+  display: block;
+}
+
+p,
+a {
+  margin: 0.4rem 0;
+}
+
+header > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+header > div h1 {
+  margin: 0;
+}
+
+header > div h1 + p {
+  opacity: 80%;
+  margin: 0.4rem 0.8rem;
+}
+
+section {
+  padding: 0.8rem 0;
 }
 /*# sourceMappingURL=main.css.map */
