--- a/main.scss
+++ b/main.scss
@@ -45,8 +45,9 @@ $fontsizes: (
   s: 0.75rem,
   r: 1rem,
   m: 1.333rem,
-  l: 2.369rem,
-  xl: 4.209rem,
+  l: 1.777rem,
+  xl: 2.369rem,
+  xxl: 3.157rem,
 );
 
 @function size($size) {
@@ -55,7 +56,7 @@ $fontsizes: (
 
 /* Box Sizing */
 $margin: 0.8rem;
-$padding: 0.6rem;
+$padding: 0.8rem;
 
 /* Border Sizing */
 $border-width: 0.05rem;
@@ -67,26 +68,83 @@ $border-radius: 50%;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html
-{
-    scrollbar-width: none;
-    position: relative;
-    width: 100%;
-    margin: 0; padding: 0;
-    font-family: font(body);
+html,
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: font(body);
+  scrollbar-width: none;
 }
 
-body
-{
-    padding: 4 * $padding;
+body {
+  padding: $padding;
 }
 
-@media only screen and (min-width: 1024px)
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: font(hero);
+}
+
+h1 {
+  font-size: size(xxl);
+}
+
+h2 {
+  font-size: size(xl);
+}
+
+h3 {
+  font-size: size(l);
+}
+
+h4 {
+  font-size: size(m);
+}
+
+a {
+  font-family: font(accent);
+  text-decoration: none;
+  display: block;
+}
+
+p,
+a {
+  margin: $margin / 2 0;
+}
+
+header {
+  & > div {
+    display: flex;
+    align-items: baseline;
+    h1 {
+      margin: 0;
+      & + p {
+        opacity: 80%;
+        margin: $margin / 2 $margin;
+      }
+    }
+  }
+}
+
+section
 {
+  padding: $padding 0;
+}
 
-} 
+@media only screen and (min-width: 1024px) {
+}
 
-@media only print 
-{
-
+@media only print {
 }
