--- a/main.css
+++ b/main.css
@@ -1,18 +1,23 @@
 /* Font Imports */
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Kumbh+Sans&family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital@0;1&family=Sanchez:ital@0;1&display=swap");
 /* Colors */
 /* Fonts */
 /* Font Sizes */
 /* Box Sizing */
 /* Border Sizing */
 * {
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Noto Serif", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html,
+html {
+  font-size: 112.5%;
+}
+
 body {
+  z-index: 0;
+  color: #2d3142;
   position: relative;
   width: 100%;
   height: 100%;
@@ -20,12 +25,12 @@ body {
           box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: "Noto Serif", serif;
   scrollbar-width: none;
 }
 
 body {
-  padding: 0.8rem;
+  padding: 0.6rem;
 }
 
 h1,
@@ -38,27 +43,30 @@ h4 {
 h1,
 h2,
 h3 {
-  font-family: "Comfortaa", sans-serif;
+  font-family: "Sanchez", sans-serif;
 }
 
 h1 {
-  font-size: 3.157rem;
+  font-size: 2.441rem;
 }
 
 h2 {
-  font-size: 2.369rem;
+  font-size: 1.953rem;
+  border-bottom: solid 2pt #ef8354;
+  margin-bottom: 0.8rem;
 }
 
 h3 {
-  font-size: 1.777rem;
+  font-size: 1.563rem;
 }
 
 h4 {
-  font-size: 1.333rem;
+  font-size: 1.25rem;
 }
 
 a {
-  font-family: "Roboto Mono", monospace;
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 200;
   text-decoration: none;
   display: block;
 }
@@ -66,6 +74,14 @@ a {
 p,
 a {
   margin: 0.4rem 0;
+}
+
+header {
+  padding: 0.6rem;
+  background-color: #ffffff;
+  border-radius: 2pt;
+  -webkit-box-shadow: 0px 10px 15px rgba(45, 49, 66, 0.1);
+          box-shadow: 0px 10px 15px rgba(45, 49, 66, 0.1);
 }
 
 header > div {
@@ -86,7 +102,56 @@ header > div h1 + p {
   margin: 0.4rem 0.8rem;
 }
 
+ul {
+  margin: 0;
+  position: relative;
+}
+
+ul li {
+  list-style: symbols("+");
+  position: inherit;
+}
+
+ul li p.date-range {
+  margin: 0.2rem;
+  opacity: 0.6;
+  font-size: 1.25rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+div.decal {
+  width: 100%;
+  height: 100%;
+}
+
+div.decal div {
+  width: inherit;
+  height: inherit;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ef8354;
+  z-index: -1;
+}
+
+div.decal div:nth-child(1) {
+  -webkit-clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
+          clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
+}
+
+div.decal div:nth-child(2) {
+  -webkit-clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
+          clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
+}
+
+div.decal div:nth-child(3) {
+  -webkit-clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
+          clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
+}
+
 section {
-  padding: 0.8rem 0;
+  padding: 0.6rem 0;
 }
 /*# sourceMappingURL=main.css.map */
