--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,10 @@
 /* Font Imports */
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Kumbh+Sans&family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital@0;1&family=Sanchez:ital@0;1&display=swap");
 
 /* Colors */
 $colors: (
   primary: #2d3142,
   secondary: #ffffff,
-  tertiary: #4f5d75,
   accent: #ef8354,
 );
 
@@ -18,18 +17,17 @@ $colors: (
 }
 
 /* Fonts */
-
 $fonts: (
   body: (
-    "Kumbh Sans",
-    sans-serif,
+    "Noto Serif",
+    serif,
   ),
   hero: (
-    "Comfortaa",
+    "Sanchez",
     sans-serif,
   ),
   accent: (
-    "Roboto Mono",
+    "IBM Plex Mono",
     monospace,
   ),
 );
@@ -39,15 +37,14 @@ $fonts: (
 }
 
 /* Font Sizes */
-
 $fontsizes: (
-  xs: 0.563rem,
   s: 0.75rem,
   r: 1rem,
-  m: 1.333rem,
-  l: 1.777rem,
-  xl: 2.369rem,
-  xxl: 3.157rem,
+  m: 1.25rem,
+  l: 1.563rem,
+  xl: 1.953rem,
+  xxl: 2.441rem,
+  xxx: 3.052rem,
 );
 
 @function size($size) {
@@ -56,11 +53,11 @@ $fontsizes: (
 
 /* Box Sizing */
 $margin: 0.8rem;
-$padding: 0.8rem;
+$padding: 0.6rem;
 
 /* Border Sizing */
 $border-width: 0.05rem;
-$border-radius: 50%;
+$border-radius: 2pt;
 
 * {
   font-family: font(body);
@@ -68,8 +65,13 @@ $border-radius: 50%;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html,
+html {
+  font-size: 112.5%;
+}
+
 body {
+  z-index: 0;
+  color: color(primary);
   position: relative;
   width: 100%;
   height: 100%;
@@ -103,6 +105,8 @@ h1 {
 
 h2 {
   font-size: size(xl);
+  border-bottom: solid 2pt color(accent);
+  margin-bottom: $margin;
 }
 
 h3 {
@@ -115,6 +119,7 @@ h4 {
 
 a {
   font-family: font(accent);
+  font-weight: 200;
   text-decoration: none;
   display: block;
 }
@@ -136,14 +141,57 @@ header {
       }
     }
   }
+  padding: $padding;
+  background-color: color(secondary);
+  border-radius: $border-radius;
+  box-shadow: 0px 10px 15px colorAlpha(primary, 0.1);
 }
 
-section
-{
+ul {
+  margin: 0;
+  position: relative;
+
+  li {
+    list-style: symbols("+");
+    position: inherit;
+
+    p.date-range {
+      margin: $margin / 4;
+      opacity: 0.6;
+      font-size: size(m);
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+}
+
+div.decal {
+  width: 100%;
+  height: 100%;
+  div {
+    width: inherit;
+    height: inherit;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: color(accent);
+    z-index: -1;
+
+    &:nth-child(1) {
+      clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
+    }
+    &:nth-child(2) {
+      clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
+    }
+    &:nth-child(3) {
+      clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
+    }
+  }
+}
+
+section {
   padding: $padding 0;
-}
-
-@media only screen and (min-width: 1024px) {
 }
 
 @media only print {
