--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ h1 {
 
 h2 {
   font-size: 1.953rem;
-  border-bottom: solid 2pt #ef8354;
+  border-bottom: solid 2pt #2667FF;
   margin-bottom: 0.8rem;
 }
 
@@ -69,6 +69,11 @@ a {
   font-weight: 200;
   text-decoration: none;
   display: block;
+  color: #2667FF;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
 }
 
 p,
@@ -77,11 +82,8 @@ a {
 }
 
 header {
-  padding: 0.6rem;
-  background-color: #ffffff;
-  border-radius: 2pt;
-  -webkit-box-shadow: 0px 10px 15px rgba(45, 49, 66, 0.1);
-          box-shadow: 0px 10px 15px rgba(45, 49, 66, 0.1);
+  border-left: solid 2pt #2667FF;
+  padding-left: 0.6rem;
 }
 
 header > div {
@@ -132,23 +134,33 @@ div.decal div {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #ef8354;
+  background-color: #2667FF;
   z-index: -1;
+  opacity: 20%;
 }
 
 div.decal div:nth-child(1) {
   -webkit-clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
           clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
+  background: radial-gradient(circle, transparent 20%, white 20%, white 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, white 20%, white 80%, transparent 80%, transparent) 50px 50px, linear-gradient(#2667FF 8px, transparent 8px) 0 -4px, linear-gradient(90deg, #2667FF 8px, transparent 8px) -4px 0;
+  background-color: white;
+  background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
 }
 
 div.decal div:nth-child(2) {
   -webkit-clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
           clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
+  background: linear-gradient(63deg, #2667FF 23%, transparent 23%) 7px 0, linear-gradient(63deg, transparent 74%, #2667FF 78%), linear-gradient(63deg, transparent 34%, #2667FF 38%, #2667FF 58%, transparent 62%), transparent;
+  background-size: 16px 48px;
 }
 
 div.decal div:nth-child(3) {
   -webkit-clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
           clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
+  background-color: rgba(38, 103, 255, 0.4);
+  background-image: linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white);
+  background-size: 80px 140px;
+  background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px, 40px 70px;
 }
 
 section {
