--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,7 @@
 $colors: (
   primary: #2d3142,
   secondary: #ffffff,
-  accent: #ef8354,
+  accent: #2667FF,
 );
 
 @function color($color) {
@@ -122,6 +122,12 @@ a {
   font-weight: 200;
   text-decoration: none;
   display: block;
+  color: color(accent);
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 p,
@@ -141,10 +147,8 @@ header {
       }
     }
   }
-  padding: $padding;
-  background-color: color(secondary);
-  border-radius: $border-radius;
-  box-shadow: 0px 10px 15px colorAlpha(primary, 0.1);
+  border-left: solid 2pt color(accent);
+  padding-left: $padding;
 }
 
 ul {
@@ -177,15 +181,100 @@ div.decal {
     left: 0;
     background-color: color(accent);
     z-index: -1;
+    opacity: 20%;
 
     &:nth-child(1) {
       clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
+      background: radial-gradient(
+          circle,
+          transparent 20%,
+          white 20%,
+          white 80%,
+          transparent 80%,
+          transparent
+        ),
+        radial-gradient(
+            circle,
+            transparent 20%,
+            white 20%,
+            white 80%,
+            transparent 80%,
+            transparent
+          )
+          50px 50px,
+        linear-gradient(color(accent) 8px, transparent 8px) 0 -4px,
+        linear-gradient(90deg, color(accent) 8px, transparent 8px) -4px 0;
+      background-color: white;
+      background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
     }
     &:nth-child(2) {
       clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
+      background: linear-gradient(63deg, color(accent) 23%, transparent 23%) 7px 0,
+        linear-gradient(63deg, transparent 74%, color(accent) 78%),
+        linear-gradient(
+          63deg,
+          transparent 34%,
+          color(accent) 38%,
+          color(accent) 58%,
+          transparent 62%
+        ),
+        transparent;
+      background-size: 16px 48px;
     }
     &:nth-child(3) {
       clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
+      background-color: colorAlpha(accent, 0.4);
+      background-image: linear-gradient(
+          30deg,
+          colorAlpha(accent, 0.6) 12%,
+          transparent 12.5%,
+          transparent 87%,
+          colorAlpha(accent, 0.6) 87.5%,
+          colorAlpha(accent, 0.6)
+        ),
+        linear-gradient(
+          150deg,
+          colorAlpha(accent, 0.6) 12%,
+          transparent 12.5%,
+          transparent 87%,
+          colorAlpha(accent, 0.6) 87.5%,
+          colorAlpha(accent, 0.6)
+        ),
+        linear-gradient(
+          30deg,
+          colorAlpha(accent, 0.6) 12%,
+          transparent 12.5%,
+          transparent 87%,
+          colorAlpha(accent, 0.6) 87.5%,
+          colorAlpha(accent, 0.6)
+        ),
+        linear-gradient(
+          150deg,
+          colorAlpha(accent, 0.6) 12%,
+          transparent 12.5%,
+          transparent 87%,
+          colorAlpha(accent, 0.6) 87.5%,
+          colorAlpha(accent, 0.6)
+        ),
+        linear-gradient(
+          60deg,
+          white 25%,
+          transparent 25.5%,
+          transparent 75%,
+          white 75%,
+          white
+        ),
+        linear-gradient(
+          60deg,
+          white 25%,
+          transparent 25.5%,
+          transparent 75%,
+          white 75%,
+          white
+        );
+      background-size: 80px 140px;
+      background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px,
+        40px 70px;
     }
   }
 }
