--- a/main.css
+++ b/main.css
@@ -11,26 +11,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-  font-size: 112.5%;
-}
-
 body {
   z-index: 0;
   color: #2d3142;
   position: relative;
   width: 100%;
   height: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
+  margin: auto;
+  padding: 0.8rem;
   font-family: "Noto Serif", serif;
   scrollbar-width: none;
-}
-
-body {
-  padding: 0.6rem;
+  width: 100%;
+  max-width: 900px;
 }
 
 h1,
@@ -53,7 +46,7 @@ h1 {
 h2 {
   font-size: 1.953rem;
   border-bottom: solid 2pt #2667FF;
-  margin-bottom: 0.8rem;
+  margin-bottom: 0.2rem;
 }
 
 h3 {
@@ -66,68 +59,72 @@ h4 {
 
 a {
   font-family: "IBM Plex Mono", monospace;
-  font-weight: 200;
+  font-weight: bold;
   text-decoration: none;
   display: block;
   color: #2667FF;
 }
-
 a:hover, a:focus {
   text-decoration: underline;
 }
 
 p,
 a {
-  margin: 0.4rem 0;
+  margin: 0.1rem 0;
 }
 
 header {
   border-left: solid 2pt #2667FF;
-  padding-left: 0.6rem;
+  padding-left: 0.2rem;
 }
-
 header > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  align-items: baseline;
 }
-
 header > div h1 {
   margin: 0;
 }
-
 header > div h1 + p {
   opacity: 80%;
-  margin: 0.4rem 0.8rem;
+  margin: 0.1rem 0.2rem;
 }
 
 ul {
   margin: 0;
   position: relative;
 }
-
 ul li {
   list-style: symbols("+");
   position: inherit;
 }
-
 ul li p.date-range {
-  margin: 0.2rem;
+  width: 13ch;
+  margin: 0.05rem;
   opacity: 0.6;
   font-size: 1.25rem;
   position: absolute;
   top: 0;
   right: 0;
 }
+ul li p.date-range span.present {
+  font-size: 1rem;
+  text-transform: uppercase;
+  vertical-align: 4%;
+}
+
+div.contact {
+  display: flex;
+  flex-flow: row nowrap;
+}
+div.contact * {
+  margin: 0 1.6rem 0 0;
+}
 
 div.decal {
   width: 100%;
+  width: 100vw;
   height: 100%;
 }
-
 div.decal div {
   width: inherit;
   height: inherit;
@@ -138,7 +135,6 @@ div.decal div {
   z-index: -1;
   opacity: 20%;
 }
-
 div.decal div:nth-child(1) {
   -webkit-clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
           clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
@@ -146,24 +142,21 @@ div.decal div:nth-child(1) {
   background-color: white;
   background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
 }
-
 div.decal div:nth-child(2) {
   -webkit-clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
           clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
   background: linear-gradient(63deg, #2667FF 23%, transparent 23%) 7px 0, linear-gradient(63deg, transparent 74%, #2667FF 78%), linear-gradient(63deg, transparent 34%, #2667FF 38%, #2667FF 58%, transparent 62%), transparent;
   background-size: 16px 48px;
 }
-
 div.decal div:nth-child(3) {
   -webkit-clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
           clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
   background-color: rgba(38, 103, 255, 0.4);
   background-image: linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white);
   background-size: 80px 140px;
-  background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px, 40px 70px;
+  background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px, 40px 70px;
 }
 
 section {
-  padding: 0.6rem 0;
-}
-/*# sourceMappingURL=main.css.map */
+  padding: 0.2rem 0;
+}/*# sourceMappingURL=main.css.map */
