--- a/main.scss
+++ b/main.scss
@@ -52,8 +52,8 @@ $fontsizes: (
 }
 
 /* Box Sizing */
-$margin: 0.8rem;
-$padding: 0.6rem;
+$margin: 0.2rem;
+$padding: 0.2rem;
 
 /* Border Sizing */
 $border-width: 0.05rem;
@@ -66,7 +66,7 @@ $border-radius: 2pt;
 }
 
 html {
-  font-size: 112.5%;
+  //font-size: 112.5%;
 }
 
 body {
@@ -76,14 +76,12 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  padding: $padding * 4;
   font-family: font(body);
   scrollbar-width: none;
-}
-
-body {
-  padding: $padding;
+  width: 100%;
+  max-width: 900px;
 }
 
 h1,
@@ -119,10 +117,11 @@ h4 {
 
 a {
   font-family: font(accent);
-  font-weight: 200;
+  font-weight: bold;
   text-decoration: none;
   display: block;
   color: color(accent);
+  //text-shadow: #2667FFAA 0px 0px 1px;
 
   &:hover,
   &:focus {
@@ -160,18 +159,36 @@ ul {
     position: inherit;
 
     p.date-range {
+      width: 13ch;
       margin: $margin / 4;
       opacity: 0.6;
       font-size: size(m);
       position: absolute;
       top: 0;
       right: 0;
+
+      span.present {
+        font-size: size(r);
+        text-transform: uppercase;
+        vertical-align: 4%;
+      };
     }
+  }
+}
+
+div.contact {
+  //font-size: size(s);
+  display: flex;
+  flex-flow: row nowrap;
+
+  * {
+    margin: 0 $margin * 8 0 0;
   }
 }
 
 div.decal {
   width: 100%;
+  width: 100vw;
   height: 100%;
   div {
     width: inherit;
@@ -283,5 +300,8 @@ section {
   padding: $padding 0;
 }
 
-@media only print {
+@media print {
+  // section.professional-skills {
+  //   page-break-after: always;
+  // }
 }
