--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /* Font Imports */
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital@0;1&family=Sanchez:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital,wght@0,500;1,500&family=Sanchez:ital@0;1&display=swap");
 /* Colors */
 /* Fonts */
 /* Font Sizes */
@@ -45,8 +45,10 @@ h1 {
 
 h2 {
   font-size: 1.953rem;
-  border-bottom: solid 2pt #2667FF;
   margin-bottom: 0.2rem;
+  border-bottom: 2pt solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(170deg, #2667FF 0%, #0039cb 100%);
 }
 
 h3 {
@@ -63,9 +65,14 @@ a {
   text-decoration: none;
   display: block;
   color: #2667FF;
+  background: linear-gradient(170deg, #2667FF 0%, #0039cb 100%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 a:hover, a:focus {
   text-decoration: underline;
+  -webkit-text-fill-color: #2667FF;
 }
 
 p,
@@ -74,19 +81,21 @@ a {
 }
 
 header {
-  border-left: solid 2pt #2667FF;
-  padding-left: 0.2rem;
+  border-left: 2pt solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(170deg, #2667FF 0%, #0039cb 100%);
+  padding-left: 1ch;
 }
 header > div {
   display: flex;
   align-items: baseline;
+  gap: 4pt;
 }
 header > div h1 {
   margin: 0;
 }
 header > div h1 + p {
   opacity: 80%;
-  margin: 0.1rem 0.2rem;
 }
 
 ul {
@@ -120,43 +129,12 @@ div.contact * {
   margin: 0 1.6rem 0 0;
 }
 
-div.decal {
-  width: 100%;
-  width: 100vw;
-  height: 100%;
-}
-div.decal div {
-  width: inherit;
-  height: inherit;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #2667FF;
-  z-index: -1;
-  opacity: 20%;
-}
-div.decal div:nth-child(1) {
-  -webkit-clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
-          clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
-  background: radial-gradient(circle, transparent 20%, white 20%, white 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, white 20%, white 80%, transparent 80%, transparent) 50px 50px, linear-gradient(#2667FF 8px, transparent 8px) 0 -4px, linear-gradient(90deg, #2667FF 8px, transparent 8px) -4px 0;
-  background-color: white;
-  background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
-}
-div.decal div:nth-child(2) {
-  -webkit-clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
-          clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
-  background: linear-gradient(63deg, #2667FF 23%, transparent 23%) 7px 0, linear-gradient(63deg, transparent 74%, #2667FF 78%), linear-gradient(63deg, transparent 34%, #2667FF 38%, #2667FF 58%, transparent 62%), transparent;
-  background-size: 16px 48px;
-}
-div.decal div:nth-child(3) {
-  -webkit-clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
-          clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
-  background-color: rgba(38, 103, 255, 0.4);
-  background-image: linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(30deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(150deg, rgba(38, 103, 255, 0.6) 12%, transparent 12.5%, transparent 87%, rgba(38, 103, 255, 0.6) 87.5%, rgba(38, 103, 255, 0.6)), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white), linear-gradient(60deg, white 25%, transparent 25.5%, transparent 75%, white 75%, white);
-  background-size: 80px 140px;
-  background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px, 40px 70px;
-}
-
 section {
   padding: 0.2rem 0;
+}
+
+@media print {
+  a {
+    -webkit-text-fill-color: #2667FF;
+  }
 }/*# sourceMappingURL=main.css.map */
