--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,13 @@
 /* Font Imports */
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital@0;1&family=Sanchez:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,200&family=Noto+Serif:ital,wght@0,500;1,500&family=Sanchez:ital@0;1&display=swap");
 
 /* Colors */
 $colors: (
   primary: #2d3142,
   secondary: #ffffff,
   accent: #2667FF,
+  accent-light: #4d8fff,
+  accent-dark: #0039cb,
 );
 
 @function color($color) {
@@ -14,6 +16,14 @@ $colors: (
 
 @function colorAlpha($color, $alpha) {
   @return rgba(color($color), $alpha);
+}
+
+$gradients: (
+  primary: linear-gradient(170deg, color(accent) 0%, color(accent-dark) 100%),
+);
+
+@function gradient($gradient) {
+  @return map-get($map: $gradients, $key: $gradient);
 }
 
 /* Fonts */
@@ -26,7 +36,7 @@ $fonts: (
     "Sanchez",
     sans-serif,
   ),
-  accent: (
+  mono: (
     "IBM Plex Mono",
     monospace,
   ),
@@ -56,7 +66,7 @@ $margin: 0.2rem;
 $padding: 0.2rem;
 
 /* Border Sizing */
-$border-width: 0.05rem;
+$border-width: 2pt;
 $border-radius: 2pt;
 
 * {
@@ -103,8 +113,10 @@ h1 {
 
 h2 {
   font-size: size(xl);
-  border-bottom: solid 2pt color(accent);
   margin-bottom: $margin;
+  border-bottom: $border-width solid;
+  border-image-slice: 1;
+  border-image-source: gradient(primary);
 }
 
 h3 {
@@ -116,16 +128,19 @@ h4 {
 }
 
 a {
-  font-family: font(accent);
+  font-family: font(mono);
   font-weight: bold;
   text-decoration: none;
   display: block;
   color: color(accent);
-  //text-shadow: #2667FFAA 0px 0px 1px;
+  background: gradient(primary);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 
   &:hover,
   &:focus {
     text-decoration: underline;
+    -webkit-text-fill-color: color(accent);
   }
 }
 
@@ -138,16 +153,19 @@ header {
   & > div {
     display: flex;
     align-items: baseline;
+    gap: 4pt;
     h1 {
       margin: 0;
       & + p {
         opacity: 80%;
-        margin: $margin / 2 $margin;
+        //margin: $margin $margin;
       }
     }
   }
-  border-left: solid 2pt color(accent);
-  padding-left: $padding;
+  border-left: $border-width solid;
+  border-image-slice: 1;
+  border-image-source: gradient(primary);
+  padding-left: 1ch;
 }
 
 ul {
@@ -186,116 +204,6 @@ div.contact {
   }
 }
 
-div.decal {
-  width: 100%;
-  width: 100vw;
-  height: 100%;
-  div {
-    width: inherit;
-    height: inherit;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: color(accent);
-    z-index: -1;
-    opacity: 20%;
-
-    &:nth-child(1) {
-      clip-path: polygon(60% 0%, 70% 0, 45% 100%, 35% 100%);
-      background: radial-gradient(
-          circle,
-          transparent 20%,
-          white 20%,
-          white 80%,
-          transparent 80%,
-          transparent
-        ),
-        radial-gradient(
-            circle,
-            transparent 20%,
-            white 20%,
-            white 80%,
-            transparent 80%,
-            transparent
-          )
-          50px 50px,
-        linear-gradient(color(accent) 8px, transparent 8px) 0 -4px,
-        linear-gradient(90deg, color(accent) 8px, transparent 8px) -4px 0;
-      background-color: white;
-      background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
-    }
-    &:nth-child(2) {
-      clip-path: polygon(75% 0%, 85% 0, 60% 100%, 50% 100%);
-      background: linear-gradient(63deg, color(accent) 23%, transparent 23%) 7px 0,
-        linear-gradient(63deg, transparent 74%, color(accent) 78%),
-        linear-gradient(
-          63deg,
-          transparent 34%,
-          color(accent) 38%,
-          color(accent) 58%,
-          transparent 62%
-        ),
-        transparent;
-      background-size: 16px 48px;
-    }
-    &:nth-child(3) {
-      clip-path: polygon(85% 0%, 95% 0, 70% 100%, 60% 100%);
-      background-color: colorAlpha(accent, 0.4);
-      background-image: linear-gradient(
-          30deg,
-          colorAlpha(accent, 0.6) 12%,
-          transparent 12.5%,
-          transparent 87%,
-          colorAlpha(accent, 0.6) 87.5%,
-          colorAlpha(accent, 0.6)
-        ),
-        linear-gradient(
-          150deg,
-          colorAlpha(accent, 0.6) 12%,
-          transparent 12.5%,
-          transparent 87%,
-          colorAlpha(accent, 0.6) 87.5%,
-          colorAlpha(accent, 0.6)
-        ),
-        linear-gradient(
-          30deg,
-          colorAlpha(accent, 0.6) 12%,
-          transparent 12.5%,
-          transparent 87%,
-          colorAlpha(accent, 0.6) 87.5%,
-          colorAlpha(accent, 0.6)
-        ),
-        linear-gradient(
-          150deg,
-          colorAlpha(accent, 0.6) 12%,
-          transparent 12.5%,
-          transparent 87%,
-          colorAlpha(accent, 0.6) 87.5%,
-          colorAlpha(accent, 0.6)
-        ),
-        linear-gradient(
-          60deg,
-          white 25%,
-          transparent 25.5%,
-          transparent 75%,
-          white 75%,
-          white
-        ),
-        linear-gradient(
-          60deg,
-          white 25%,
-          transparent 25.5%,
-          transparent 75%,
-          white 75%,
-          white
-        );
-      background-size: 80px 140px;
-      background-position: 0px 0px, 0px 0px, 40px 70px, 40px 70px, 0px 0px,
-        40px 70px;
-    }
-  }
-}
-
 section {
   padding: $padding 0;
 }
@@ -304,4 +212,8 @@ section {
   // section.professional-skills {
   //   page-break-after: always;
   // }
+
+  a{
+    -webkit-text-fill-color: color(accent);
+  }
 }
